--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="top" class="header">
       The 1987 Buick GNX: “The Regal from Hell”
     </header>
-    <main>
+    <main class="main">
       <div>
         <img src="img/buick1.jpg" alt="Buick picture" /> <br />
         <img src="img/buick2.jpg" alt="Buick picture rear" />
