--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div>
         <p>
           The GNX featured modifications of the turbo-charged and intercooled
-          <mark id="important"
+          <mark class="important"
             >3.8-liter V6 engine used in the Grand National, as well as special
             wheels and tires, suspension and exhaust system modifications,
             analog instrument cluster and functional body modifications</mark
